src/ui/features/plan_review/snapshots/terracotta__ui__features__plan_review__render__tests__apply_confirmation_help_120x40.snap
---
source: src/ui/features/plan_review/render.rs
expression: buffer_text(buffer)
---
Target: main [PROD] Workspace: default Tool: terraform 1.9.0 Dir: ./environments/production/main
Changes  +2 add  ~2 update  -1 destroy

────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 main [PROD]  ws:default  terraform 1.9.0  ./environments/production/main                                              ▲
  ~ resource "terraform_data" "api" {                                                                                  ┃
      id       = "api-20260920"                                                                                        ┃
      ~ input  = "before" -> "after"                                                                                   ┃
      # (4 unchanged attributes hidden)                                                                                ┃
    }                                                                                                                  ┃
                                                                                                                       ┃
  # terraform_data.worker must be┌Apply help─────────────────────────────────────────┐                                 ┃
-/+ resource "terraform_data" "wo│ Navigation                                        │                                 ┃
      ~ input = "wor┌────────────│ ↑ / ↓ / PgUp / PgDn scroll confirmation           │─────────────┐                   ┃
      - old_checksum│            │ ← / →               move in confirmation input    │             │                   ┃
      + new_checksum│ Apply this │ Home / End          move to input start or end    │             │                   ┃
    }               │            │                                                   │             │                   ┃
                    │ Target: mai│ Input                                             │             │                   ┃
  # terraform_data.o│ Workspace: │ Type                enter the confirmation text   │             │                   ┃
  - resource "terraf│ Directory: │ Backspace           delete before the cursor      │             │                   ┃
      id = "old-2026│ Tool: terra│                                                   │             │                   ┃
    }               │ Plan: +2 ad│ Context                                           │             │                   ┃
                    │            │ Tab                 show execution context        │             │                   ┃
  # terraform_data.n│ Type main t│                                                   │             │                   ┃
  + resource "terraf│ > |        │ Apply                                             │             │                   ┃
      input = "new-v│            │ Enter               confirm apply                 │             │                   ┃
      note  = "A del└────────────│ Esc                 return to plan review         │─────────────┘                   ┃
    }               Enter confirm│ ?/Esc close                                       │                                 ┃
                                 └───────────────────────────────────────────────────┘                                 ┃
Changes to Outputs:                                                                                                    ┃
  + endpoint = (known after apply)                                                                                     ┃
  ~ summary  = "old summary" -> "new summary with a deliberately long value for review"                                ┃
                                                                                                                       │
Warning: Value for "pending" is not known until apply                                                                  │
                                                                                                                       │
Plan: 2 to add, 2 to change, 1 to destroy.                                                                             │
                                                                                                                       │
Synthetic review text continues below so the viewport and scrollbar remain meaningful.                                 ▼
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
s overview | / filter | ? help | q quit                                                                        Line 3/43
