src/ui/features/plan_review/snapshots/terracotta__ui__features__plan_review__render__tests__apply_confirmation_help_160x60.snap
---
source: src/ui/features/plan_review/render.rs
expression: buffer_text(buffer)
---
Target: main [PROD] Workspace: default Tool: terraform 1.9.0 Dir: ./environments/production/main
Changes  +2 add  ~2 update  -1 destroy

────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  # terraform_data.api will be updated in-place
  ~ resource "terraform_data" "api" {
 main [PROD]  ws:default  terraform 1.9.0  ./environments/production/main
      ~ input  = "before" -> "after"
      # (4 unchanged attributes hidden)
    }

  # terraform_data.worker must be replaced
-/+ resource "terraform_data" "worker" {
      ~ input = "worker-before" -> "worker-after" # forces replacement
      - old_checksum = "sha256:0123456789abcdef0123456789abcdef0123456789abcdef"
      + new_checksum = (known after apply)
    }

  # terraform_data.old will be destroyed
  - resource "terraform_data" "old" {
      id = "old-20260920"
    }                                                ┌Apply help─────────────────────────────────────────┐
                                                     │ Navigation                                        │
  # terraform_data.new will be created  ┌────────────│ ↑ / ↓ / PgUp / PgDn scroll confirmation           │─────────────┐
  + resource "terraform_data" "new" {   │            │ ← / →               move in confirmation input    │             │
      input = "new-value"               │ Apply this │ Home / End          move to input start or end    │             │
      note  = "A deliberately long synth│            │                                                   │             │
    }                                   │ Target: mai│ Input                                             │             │
                                        │ Workspace: │ Type                enter the confirmation text   │             │
Changes to Outputs:                     │ Directory: │ Backspace           delete before the cursor      │             │
  + endpoint = (known after apply)      │ Tool: terra│                                                   │             │
  ~ summary  = "old summary" -> "new sum│ Plan: +2 ad│ Context                                           │             │
                                        │            │ Tab                 show execution context        │             │
Warning: Value for "pending" is not know│ Type main t│                                                   │             │
                                        │ > |        │ Apply                                             │             │
Plan: 2 to add, 2 to change, 1 to destro│            │ Enter               confirm apply                 │             │
                                        └────────────│ Esc                 return to plan review         │─────────────┘
Synthetic review text continues below soEnter confirm│ ?/Esc close                                       │
The same long body is intentionally reused across eve└───────────────────────────────────────────────────┘
No Terraform process, provider, state file, or cloud credential is used by this fixture.
The review surface preserves Terraform order, attributes, output values, and diagnostics.
Long lines remain unwrapped in the plan body; horizontal movement exposes the hidden suffix.
Vertical movement exposes later lines in this synthetic plan body.

End of synthetic plan body.













────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
s overview | / filter | ? help | q quit                                                                                                                Line 3/43
