src/ui/features/plan_review/snapshots/terracotta__ui__features__plan_review__render__tests__apply_confirmation_help_40x16.snap
---
source: src/ui/features/plan_review/render.rs
expression: buffer_text(buffer)
---
Target: main [PROD] Workspace: default
C┌Apply help──────────────────────────┐
 │ Navigation                       ▲ │
─│ ↑ / ↓ / PgUp / PgDn              ┃ │─
 │   scroll confirmation            ┃ │▲
 │ ← / →                            ┃ │┃
 │   move in confirmation input     ┃ ││
 │ Home / End                       │ ││
 │   move to input start or end     │ ││
 │                                  │ ││
 │ Input                            │ ││
 │ Type                             │ ││
◀︎│   enter the confirmation text    ▼ │▶︎
─│ ?/Esc close                        │─
s└────────────────────────────────────┘
? help | q quit                    L3/43
