src/ui/features/plan_review/snapshots/terracotta__ui__features__plan_review__render__tests__apply_confirmation_help_40x16_bottom.snap
---
source: src/ui/features/plan_review/render.rs
expression: buffer_text(buffer)
---
Target: main [PROD] Workspace: default
U┌Apply help──────────────────────────┐~
─│                                  ▲ │─
 │ Context                          │ │▲
 │ Tab                              │ │┃
 │   show execution context         │ │┃
 │                                  │ ││
 │ Apply                            │ ││
 │ Enter                            ┃ ││
 │   confirm apply                  ┃ ││
 │ Esc                              ┃ ││
-│   return to plan review          ▼ ││
◀︎│ ↑/↓/k/j/PgUp/PgDn scroll           │▶︎
─│ ?/Esc close                        │─
s└────────────────────────────────────┘
q quit                             L3/43
