src/ui/features/plan_review/snapshots/terracotta__ui__features__plan_review__render__tests__apply_confirmation_help_80x24.snap
---
source: src/ui/features/plan_review/render.rs
expression: buffer_text(buffer)
---
Target: main [PROD] Workspace: default Tool: terraform 1.9.0 Dir: ./envir...main
Cmain [PROD]  ws:default  terraform 1.9.0  ./environments/production/main

─────────────┌Apply help─────────────────────────────────────────┐──────────────
  # terraform│ Navigation                                        │             ▲
 ┌───────────│ ↑ / ↓ / PgUp / PgDn scroll confirmation           │────────────┐┃
 │           │ ← / →               move in confirmation input    │            │┃
 │ Apply this│ Home / End          move to input start or end    │            │┃
 │           │                                                   │            │┃
 │ Target: ma│ Input                                             │            │┃
 │ Workspace:│ Type                enter the confirmation text   │            │┃
 │ Directory:│ Backspace           delete before the cursor      │            │┃
-│ Tool: terr│                                                   │            ││
 │ Plan: +2 a│ Context                                           │            ││
 │           │ Tab                 show execution context        │            ││
 │ Type main │                                                   │            ││
 │ > |       │ Apply                                             │            ││
 │           │ Enter               confirm apply                 │            ││
 └───────────│ Esc                 return to plan review         │────────────┘│
 Enter confir│ ?/Esc close                                       │             │
      id = "o└───────────────────────────────────────────────────┘             │
◀︎═══════════════════════════════════════════════════════════════════───────────▶︎
────────────────────────────────────────────────────────────────────────────────
s overview | / filter | ? help | q quit                                Line 3/43
