src/ui/features/plan_review/snapshots/terracotta__ui__features__plan_review__render__tests__preview_120x40_apply-confirmation.snap
---
source: src/ui/features/plan_review/render.rs
expression: buffer_text(buffer)
---
Target: main [PROD] Workspace: default Tool: terraform loading... Dir: /repo/environments/production/main
Changes  +2 add  ~2 update  -1 destroy

────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 main [PROD]  ws:default  terraform loading...  /repo/environments/production/main                                     ▲
  ~ resource "terraform_data" "api" {                                                                                  ┃
      id       = "api-20260920"                                                                                        ┃
      ~ input  = "before" -> "after"                                                                                   ┃
      # (4 unchanged attributes hidden)                                                                                ┃
    }                                                                                                                  ┃
                                                                                                                       ┃
  # terraform_data.worker must be replaced                                                                             ┃
-/+ resource "terraform_data" "worker" {                                                                               ┃
      ~ input = "wor┌──────────────────────────────────────────────────────────────────────────────┐                   ┃
      - old_checksum│                                                                              │                   ┃
      + new_checksum│ Apply this reviewed plan?                                                    │                   ┃
    }               │                                                                              │                   ┃
                    │ Target: main [PROD]                                                          │                   ┃
  # terraform_data.o│ Workspace: default                                                           │                   ┃
  - resource "terraf│ Directory: /repo/environments/production/main                                │                   ┃
      id = "old-2026│ Tool: terraform loading...                                                   │                   ┃
    }               │ Plan: +2 add  ~2 update  0 replace  -1 destroy                               │                   ┃
                    │                                                                              │                   ┃
  # terraform_data.n│ Type main to apply (exact match).                                            │                   ┃
  + resource "terraf│ > |                                                                          │                   ┃
      input = "new-v│                                                                              │                   ┃
      note  = "A del└──────────────────────────────────────────────────────────────────────────────┘                   ┃
    }               Enter confirm | Esc back | ? help                                                                  ┃
                                                                                                                       ┃
Changes to Outputs:                                                                                                    ┃
  + endpoint = (known after apply)                                                                                     ┃
  ~ summary  = "old summary" -> "new summary with a deliberately long value for review"                                ┃
                                                                                                                       │
Warning: Value for "pending" is not known until apply                                                                  │
                                                                                                                       │
Plan: 2 to add, 2 to change, 1 to destroy.                                                                             │
                                                                                                                       │
Synthetic review text continues below so the viewport and scrollbar remain meaningful.                                 ▼
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
s overview | / filter | ? help | q quit                                                                        Line 3/43
