src/ui/features/plan_review/snapshots/terracotta__ui__features__plan_review__render__tests__preview_120x40_empty.snap
---
source: src/ui/features/plan_review/render.rs
expression: buffer_text(buffer)
---
Target: empty Workspace: default Tool: terraform loading... Dir: /repo/environments/staging/empty  Changes  No changes

────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────



































────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
s overview | / filter | ? help | q quit                                                                         Line 1/1
